# qsharp-xacc-runtime

./: .gitignore  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
Examples/SimpleCircuit/: Driver.cs  Program.qs  SimpleCircuit.csproj
Native/: CMakeLists.txt
Native/src/: CMakeLists.txt  capi.cpp  capi.hpp
XaccAdapter/: Adapter.cs  Datastructure.cs  QubitManager.cs  XaccAdapter.csproj
